kubernetes-yaml/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: gantry
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: harbor.gantry.ai/gantry/user-management:0.1.1
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          args: ["--spring.profiles.active=prod"]
      imagePullSecrets:
        - name: harbor-cred
